--- a/templates/albums/confirm_delete.html
+++ b/templates/albums/confirm_delete.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block content %}
 <h1 class="confirm">Are you sure you want to delete?</h1>
-<button type="yes">yes</button>
-<button type="no">no</button>
+<form action="" method="post">
+    {% csrf_token %}
+    <button class="confirm-button" type="delete">Delete</button>
+</form>
+<a class="confirm-button" href="{% url 'list_albums' %}">cancel</a>
+{% endblock %}
